# QAudioTagReader

./: .gitmodules  CMakeLists.txt  QAudioTag.pro  QAudioTag_global.h  README.md  qaudiotag.cpp  qaudiotag.h
examples/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  QAudioTagReader  qaudiotag.cpp  qaudiotag.h  qaudiotagreader.cpp  qaudiotagreader.h  qaudiotagreader_global.h  qreader.h
